# bastoji-mobil

./: .gitignore  .gitmodules  README.md  build.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/Bastoji/release/: output.json
app/src/androidTest/java/com/breadwallet/database/: DatabaseTests.java
app/src/androidTest/java/com/breadwallet/platform/: KVStoreTests.java  PlatformTests.java
app/src/androidTest/java/com/breadwallet/presenter/: ScanResultTest.java
app/src/androidTest/java/com/breadwallet/screenshots/: JUnit4StyleTests.java
app/src/androidTest/java/com/breadwallet/security/: KeyStoreTests.java  NewKeyStoreTests.java
app/src/androidTest/java/com/breadwallet/wallet/: WalletTests.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/platform/: APIClient.java  BRGeoWebSocketHandler.java  BRHTTPHelper.java  GeoLocationManager.java  HTTPServer.java
app/src/main/java/com/platform/entities/: TxMetaData.java  WalletInfo.java
app/src/main/java/com/platform/interfaces/: KVStoreAdaptor.java  Middleware.java
app/src/main/java/com/platform/kvstore/: CompletionObject.java  RemoteKVStore.java  ReplicatedKVStore.java
app/src/main/java/com/platform/sqlite/: KVItem.java  (+1 more)
app/src/main/jni/strakswallet-core/: BRAddress.c  BRAddress.h  BRBIP32Sequence.c  BRBIP38Key.c  BRBase58.c  BRBase58.h  BRBech32.c  BRBech32.h  BRChainParams.h  BRCrypto.c  BRCrypto.h  BRInt.h  BRKey.c  BRKey.h  BRMerkleBlock.c  BRMerkleBlock.h  BRPeer.c  BRPeer.h  BRPeerManager.c  BRPeerManager.h  BRTransaction.c  BRTransaction.h  BRWallet.c  BRWallet.h  README.md  module.modulemap  test.c
app/src/main/jni/strakswallet-core/Java/: .gitignore  BRCoreJni.c  BRCoreJni.h  Makefile  Notes  com_strakswallet_core_BRCoreAddress.c  com_strakswallet_core_BRCoreAddress.h  com_strakswallet_core_BRCoreChainParams.c  com_strakswallet_core_BRCoreChainParams.h  com_strakswallet_core_BRCoreJniReference.c  com_strakswallet_core_BRCoreJniReference.h  com_strakswallet_core_BRCoreKey.c  com_strakswallet_core_BRCoreKey.h  com_strakswallet_core_BRCoreMasterPubKey.c  com_strakswallet_core_BRCoreMasterPubKey.h  com_strakswallet_core_BRCoreMerkleBlock.c  com_strakswallet_core_BRCoreMerkleBlock.h  com_strakswallet_core_BRCorePaymentProtocol.c  com_strakswallet_core_BRCorePaymentProtocol.h  com_strakswallet_core_BRCorePaymentProtocolACK.h  com_strakswallet_core_BRCorePaymentProtocolDetails.h  com_strakswallet_core_BRCorePaymentProtocolEncryptedMessage.h  com_strakswallet_core_BRCorePaymentProtocolInvoiceRequest.h  com_strakswallet_core_BRCorePaymentProtocolMessage.h  com_strakswallet_core_BRCorePaymentProtocolPayment.h  com_strakswallet_core_BRCorePaymentProtocolPaymentACK.h  com_strakswallet_core_BRCorePaymentProtocolRequest.h  com_strakswallet_core_BRCorePeer.c  com_strakswallet_core_BRCorePeer.h  com_strakswallet_core_BRCorePeerManager.c  com_strakswallet_core_BRCorePeerManager.h  com_strakswallet_core_BRCoreTransaction.c  com_strakswallet_core_BRCoreTransaction.h  com_strakswallet_core_BRCoreTransactionInput.c  com_strakswallet_core_BRCoreTransactionInput.h  com_strakswallet_core_BRCoreTransactionOutput.c  com_strakswallet_core_BRCoreTransactionOutput.h  com_strakswallet_core_BRCoreWallet.c  com_strakswallet_core_BRCoreWallet.h
app/src/main/jni/strakswallet-core/Lyra2RE/: Lyra2.c  Lyra2RE.c
app/src/main/jni/strakswallet-core/bcash/: BRBCashAddr.c  BRBCashAddr.h  BRBCashParams.h
app/src/main/res/anim/: exit_to_bottom.xml  exit_to_left.xml  shake.xml
app/src/main/res/drawable/: admin_card_shape.xml  arrow_leave.xml  bch_dialog_gradient.xml  brd_logo_white_svg.xml  bread_toggle_on.xml  checkmark_circled.xml  chevron_right_light.xml  crypto_card_shape.xml  ic_bread_logo.xml  ic_chevron_left.xml  ic_chevron_left_white_24dp.xml  ic_chevron_right.xml  ic_close_light_grey.xml  ic_help_circle.xml  ic_question_mark_shape.xml  ic_reload_blue.xml  ic_rescan.xml  ic_search_white_24dp.xml  ic_security.xml  ic_settings_cog.xml  ic_swap_horizontal.xml  ic_sync_white_24dp.xml  ic_take_picture.xml  ic_webview_left.xml  ic_webview_left_inactive.xml  ic_webview_right.xml  ic_webview_right_inactive.xml  rounded_gradient_header.xml  settings_row_shape.xml  sync_progress_bar.xml  tx_details_bg_shape.xml  tx_failed_indicator.xml  wallet_sync_progress_bar.xml
app/src/main/res/drawable-hdpi/: toast_layout_black.xml  toast_layout_blue.xml  toast_layout_orange.xml
app/src/main/res/layout/: activity_about.xml  activity_advanced.xml  activity_bread.xml  activity_camera.xml  activity_currency_settings.xml  activity_disabled.xml  activity_display_currency.xml  activity_fingerprint.xml  activity_home.xml  activity_import.xml  activity_input_words.xml  activity_intro.xml  activity_intro_recover.xml  activity_nodes.xml  activity_notification.xml  activity_paper_key.xml  activity_paper_key_prove.xml  activity_pin.xml  activity_pin_template.xml  activity_qr.xml  activity_restore.xml  activity_security_center.xml  activity_settings.xml  activity_share_data.xml  activity_spend_limit.xml  activity_sync_blockchain.xml  activity_wallet.xml  activity_web_view.xml  activity_write_down.xml  bread_alert_dialog.xml  bread_spinner_item.xml  currency_list_item.xml  dialog_bch_welcome.xml  fingerprint_dialog_container.xml  fragment_bread_pin.xml  fragment_greetings.xml  fragment_manage.xml  fragment_menu.xml  fragment_receive.xml  fragment_send.xml  (+18 more)
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml  values.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sv/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/test/java/: PaperKeyTests.java
(+199 files in other folders)
